--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>I clicked on</title>
     <style>
-      .bigbox {width:300px;height:300px;background:black;cursor:pointer;}
-      #cordinates { list-style-type: none; margin: 0; padding: 0; }
+      .bigbox {width:300px;height:300px;background:black;cursor:pointer;margin:0 auto}
+      #cordinates { list-style-type: none; }
       #cordinates li { padding: 5px 10px; }
       #cordinates li:nth-child(odd) { background: #eee; }
     </style>
   </head>
   <body>
-    	<div class="bigbox"></div>
+	<div class="bigbox">"Click in the box"</div>
     	<ul id="cordinates"></ul>
     	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
@@ -23,7 +23,11 @@
     		});    
 	});
       	socket.on('cordinates', function(cordinates){
-        	$('#cordinates').append($('<li>').text(cordinates));
+        	$('#cordinates').append($('<li>').text('(' + cordinates.left + ',' + cordinates.top + ')' ));
+		$('.bigbox').append($('<div style="position:relative;background:red;width:3px;height:3px;left:'+cordinates.top+'px;top:'+cordinates.top+'px" class="timeout"></div>'));
+		setTimeout(function() {
+			$(".timeout").remove();
+		}, 3000);
       	});
 	</script>
   </body>
