--- a/index.html
+++ b/index.html
@@ -3,25 +3,38 @@
   <head>
     <title>I clicked on</title>
     <style>
-      .bigbox {width:300px;height:300px;background:black;cursor:pointer;margin:0 auto}
-      #cordinates { list-style-type: none; }
-      #cordinates li { padding: 5px 10px; }
+      /* CSS style for assignment*/
+      .bigbox {width:300px;height:300px;background:black;cursor:pointer;margin:0 auto;color:white;text-align:center}
+      #cordinates { list-style-type: none;text-align:center }
+      #cordinates li { padding: 5px }
       #cordinates li:nth-child(odd) { background: #eee; }
     </style>
   </head>
   <body>
-	<div class="bigbox">"Click in the box"</div>
-    	<ul id="cordinates"></ul>
-    	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+	<div>
+		<!-- Box for mouse clicks-->
+		<div class="bigbox">"Click in the box"</div>
+	
+		<!--Cordinates-->
+		<div>
+			<h2 style='text-align:center'>"Mouse clicked on Cordinates : "</h2>
+		    	<ul id="cordinates"></ul>
+		</div>
+    	</div>
+
+	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
     	<script>
 	var socket = io();
+
 	$(document).ready(function(e) {
     		$('.bigbox').click(function(e) {
         		socket.emit('cordinates', (e.pageX+ ' , ' + e.pageY));
 			return false;
     		});    
 	});
+
       	socket.on('cordinates', function(cordinates){
         	$('#cordinates').append($('<li>').text('(' + cordinates.left + ',' + cordinates.top + ')' ));
 		$('.bigbox').append($('<div style="position:relative;background:red;width:3px;height:3px;left:'+cordinates.top+'px;top:'+cordinates.top+'px" class="timeout"></div>'));
@@ -30,5 +43,6 @@
 		}, 3000);
       	});
 	</script>
+
   </body>
 </html>
