vertical scrollbar added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>I clicked on</title>
     <style>
-      /* CSS style for assignment*/
+      /* CSS styles*/
       .bigbox {width:300px;height:300px;background:black;cursor:pointer;margin:0 auto;color:white;text-align:center}
-      #cordinates { list-style-type: none;text-align:center }
+      #cordinates { list-style-type: none;text-align:center;max-height: 250px; overflow-y: scroll; }
       #cordinates li { padding: 5px }
       #cordinates li:nth-child(odd) { background: #eee; }
     </style>
