adding git fork button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
 	<div>
+		<!-- Place this tag where you want the button to render. -->
+		<a aria-label="Fork adishap/iClickedOn on GitHub" data-count-aria-label="# forks on GitHub" data-count-api="/repos/adishap/iClickedOn#forks_count" data-count-href="/adishap/iClickedOn/network" data-style="mega" data-icon="octicon-repo-forked" href="https://github.com/adishap/iClickedOn/fork" class="github-button">Fork</a>
+		
 		<!-- Box for mouse clicks-->
 		<div class="bigbox">"Click in the box"</div>
 	
@@ -21,6 +24,9 @@
 		    	<ul id="cordinates"></ul>
 		</div>
     	</div>
+	
+	<!-- Place this tag in your head or just before your close body tag. -->
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 
 	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
